# nchat

./: .gitignore  .travis.yml  Brewfile  Brewfile.old  CMakeLists.txt  CONTRIBUTING.md  DEBUGGING.md  FLAGS.md  LICENSE  LICENSEPLAN.md  README.md  genman.sh  make.sh
Formula/: nchat.rb
dev/: devmain.cpp  main.cpp  (+2 more)
lib/duchat/: CMakeLists.txt  README.md
lib/duchat/src/: duchat.cpp  duchat.h
lib/gostat/: CMakeLists.txt  assemble.sh
lib/ncutil/: CMakeLists.txt  THIRD_PARTY_LICENSES
lib/ncutil/ext/QR-Code-generator/cpp/: CMakeLists.txt
lib/ncutil/ext/apathy/: README.md
lib/ncutil/ext/sqlite_modern_cpp/tests/: exceptions.cc
lib/ncutil/ext/stb/: CMakeLists.txt
lib/ncutil/src/: appconfig.cpp  appconfig.h  apputil.cpp  apputil.h  buildinfo.cpp  buildinfo.h.in  cacheutil.cpp  cacheutil.h  clipboard.cpp  clipboard.h  config.cpp  config.h  debuginfo.cpp  debuginfo.h  emojilist.cpp  emojilist.h  emojiutil.cpp  emojiutil.h  emojiutil_map.h  emojiutil_view.h  fileutil.cpp  fileutil.h  guiutil.cpp  guiutil.h  log.cpp  log.h  messagecache.cpp  messagecache.h  numutil.cpp  numutil.h  owned_mutex.cpp  owned_mutex.h  profiles.cpp  profiles.h  protocolutil.cpp  protocolutil.h  qrutil.cpp  qrutil.h  scopeddirlock.cpp  scopeddirlock.h  (+14 more)
lib/sgchat/: CMakeLists.txt  THIRD_PARTY_LICENSES
lib/sgchat/go/: CMakeLists.txt  build-libsignal.sh  cgosg.go  go.mod  go.sum  gosg.go  libsignal.cmake
lib/sgchat/go/ext/: nchat-signal.patch
lib/sgchat/go/ext/signal/: .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.ci  LICENSE.exceptions  README.md  ROADMAP.md  build-go.sh  build-rust.sh  build.sh  docker-run.sh  go.mod  go.sum
lib/sgchat/go/ext/signal/.github/ISSUE_TEMPLATE/: bug.md  config.yml
lib/sgchat/go/ext/signal/.github/workflows/: go.yml  stale.yml
lib/sgchat/go/ext/signal/cmd/mautrix-signal/: legacyprovision.go  main.go
lib/sgchat/go/ext/signal/pkg/connector/: backfill.go  capabilities.go  chatinfo.go  chatsync.go  client.go  commands.go  config.go  connector.go  dbmeta.go  directmedia.go  example-config.yaml  groupinfo.go  handlematrix.go  handlesignal.go  id.go  login.go
lib/sgchat/go/ext/signal/pkg/libsignalgo/: README.md  accountentropy.go  address.go  address_test.go  aes256gcmsiv.go  aes256gcmsiv_test.go  authcredential.go  backupkey.go  buffer.go  cflags.go  ciphertextmessage.go  conversions.go  decryptionerrormessage.go  devicetransfer.go  devicetransfer_test.go  error.go  fingerprint.go  fingerprint_test.go  groupcipher.go  groupcipher_test.go  groupsecretparams.go  groupsendendorsement.go  hsmenclave.go  hsmenclave_test.go  identitykey.go  identitykey_test.go  identitykeystore.go  inmemorystore_test.go  kdf.go  kdf_test.go  kyberprekey.go  kyberprekeystore.go  libsignal-ffi.h  logging.go  message.go  messagebackupkey.go  nocopy.go  plaintextcontent.go  prekey.go  prekeybundle.go  (+30 more)
lib/sgchat/go/ext/signal/pkg/msgconv/: from-matrix.go  from-signal-backup.go  from-signal.go  imagepack.go  msgconv.go  urlpreview.go
lib/sgchat/go/ext/signal/pkg/msgconv/matrixfmt/: convert.go  convert_test.go  html.go
lib/sgchat/go/ext/signal/pkg/signalid/: dbmeta.go  ids.go  media.go
lib/sgchat/go/ext/signal/pkg/signalmeow/: attachments.go  attachments_stream.go  backup.go  client.go  contact.go  contactdiscovery.go  devicename.go  groupcache.go  groups.go  keys.go  misc.go  profile.go  provisioning.go  provisioning_cipher.go  pushreg.go  receiving.go  receiving_decrypt.go  retry.go  senderkey.go  sending.go  serviceauth.go  sticker.go  storageservice.go  types.go
lib/sgchat/src/: sgchat.cpp  sgchat.h
lib/tgchat/: CMakeLists.txt  README.md  THIRD_PARTY_LICENSES
lib/tgchat/ext/td/: CMakeLists.txt  README.md
lib/tgchat/ext/td/example/cpp/: CMakeLists.txt
lib/tgchat/ext/td/example/uwp/: Telegram.Td.UWP.nuspec  extension.vsixmanifest
lib/tgchat/ext/td/example/web/tdweb/: package-lock.json
lib/tgchat/ext/td/td/generate/scheme/: td_api.tl  telegram_api.tl
lib/tgchat/ext/td/td/generate/tl-parser/: CMakeLists.txt
lib/tgchat/ext/td/td/mtproto/: HttpTransport.cpp  HttpTransport.h  IStreamTransport.h  RawConnection.cpp  TcpTransport.cpp  TcpTransport.h  Transport.cpp  Transport.h
lib/tgchat/ext/td/td/telegram/: BusinessConnectionManager.cpp  CallActor.cpp  CallActor.h  CallManager.cpp  CallManager.h  ChatManager.cpp  ChatManager.h  ConfigManager.cpp  ConfigManager.h  DialogAction.cpp  DialogAdministrator.h  DialogEventLog.cpp  DialogManager.cpp  DialogManager.h  DialogParticipant.cpp  DialogParticipant.h  DialogParticipantManager.cpp  DialogParticipantManager.h  Global.cpp  GroupCallMessage.cpp  InlineQueriesManager.cpp  InputCallId.cpp  InputCallId.h  InputGroupCallId.cpp  InputGroupCallId.h  LinkManager.cpp  LinkManager.h  MessageContent.cpp  MessageContent.h  MessageContentType.cpp  MessageContentType.h  MessageEntity.cpp  MessageEntity.h  MessageEntity.hpp  MessageInputReplyTo.cpp  MessageInputReplyTo.h  MessageQueryManager.cpp  MessagesManager.cpp  MessagesManager.h  NotificationManager.cpp  (+27 more)
lib/tgchat/ext/td/td/tl/: TlObject.h
lib/tgchat/ext/td/tdnet/: CMakeLists.txt
lib/tgchat/ext/td/tdnet/td/net/: DarwinHttp.h  DarwinHttp.mm
lib/tgchat/ext/td/test/: link.cpp  message_entities.cpp
lib/tgchat/src/: tgchat.cpp  tgchat.h
lib/wachat/: CMakeLists.txt  README.md
lib/wachat/go/: CMakeLists.txt  cgowa.go  go.mod  go.sum  gowa.go  main.go
lib/wachat/go/ext/go-whatsapp/: chat_history.go  go.sum  handler.go  message.go
lib/wachat/go/ext/go-whatsapp/examples/login/: go.mod  go.sum
lib/wachat/go/ext/go-whatsapp/examples/loginWithProxy/: go.sum
lib/wachat/go/ext/go-whatsapp/examples/receiveMessages/: go.sum
lib/wachat/src/: wachat.cpp  wachat.h
lib/wmchat/: CMakeLists.txt  README.md  THIRD_PARTY_LICENSES
lib/wmchat/go/: CMakeLists.txt  cgowm.go  go.mod  go.sum  gowm.go  main.go
lib/wmchat/go/ext/: nchat-whatsmeow.patch
lib/wmchat/go/ext/whatsmeow/: appstate.go  download.go
lib/wmchat/go/ext/whatsmeow/socket/: framesocket.go
lib/wmchat/src/: wmchat.cpp  wmchat.h
(+254 files in other folders)
